<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Secure Chat</string>

    <!-- ACTIVITY MAIN -->
    <string name="tvLogin">Username</string>
    <string name="tvPassword">Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>

    <!-- ACTIVITY REGISTER -->
    <string name="tvRegistrationTitle">Registration form:</string>
    <string name="tvEmail">Email</string>
    <string name="btnRegisterGcm">Register device</string>
    <string name="btnRegisterAccount">Register account</string>
    <string name="tvGcmRegistration">Please register your Android device</string>

    <!-- FRAGMENT CONTENT CAMERA -->
    <string name="ivPicture_desc">Imageview that will hold the picture</string>

    <!-- FRAGMENT_CONTENT_HOME -->
    <string name="tv_welcome">Welcome home, </string>
    <string name="tv_intro">Welcome to Secure Chat, the #1 full-featured, safe and reliable android chat application. If you enjoy our app, please review it in the Android Play store!</string>
    <string name="tv_PlayServices">Google Play Services</string>
    <string name="tv_GcmServices">Google Cloud Messaging</string>
    <string name="tv_DeviceRegistration">Device registration</string>
    <string name="btn_update">Update</string>
    
    <!-- FRAGMENT_CONTENT_OPTIONS -->
    <string name="btn_fix">Check</string>
    <string name="change_pass">Change password</string>
    <string name="tv_allow_camera">Camera access already allowed</string>
    <string name="tv_allow_gps">GPS access already allowed</string>
    <string name="ed_change_pass_hint">Enter new password here</string>
    <string name="btn_reregister">Re-register GCM Account</string>
    <string name="tv_title_validation">Validation</string>
    <string name="tv_title_access">Access</string>
    <string name="tv_title_actions">Actions</string>
    
    <!-- FRAGMENT CONTENT CONTACTS -->
    <string name="menu_add">Add new contact</string>    
    
    <!-- FRAGMENT_CONTENT_GCM -->
    <string name="msg_welcome">You can enter your message below:</string>
    <string name="button_clear">Clear</string>
    <string name="button_send">Send</string>
    <string name="ed_text_hint">Write here</string>
    <string name="recipient">Recipient: </string>
    
    <!-- MENU DRAWER ACTION BAR -->
    <string name="drawer_open">Open Menu</string>
    <string name="drawer_close">Close Menu</string>
    <string name="iv_left_drawer">Menu Sliding Icon</string>
    
    <!-- GOOGLE CLOUD MESSAGING -->
    <!-- Information for users that need to install Google Play services (from Play Store) -->
    <string name="common_google_play_services_install_title" msgid="7215213145546190223">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone" msgid="2122112764540849864">This app won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet" msgid="7351599665250191022">This app won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_button" msgid="7153882981874058840">Get Google Play services</string>

    <!-- Information for users that need to enable Google Play Services -->
    <string name="common_google_play_services_enable_title" msgid="5122002158466380389">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text" msgid="227660514972886228">This app won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_button" msgid="2523291102206661146">Enable Google Play services</string>

    <!-- Information for users that need to update Google Play Services -->
    <string name="common_google_play_services_update_title" msgid="1788179980625863495">Update Google Play services</string>
    <string name="common_google_play_services_update_text" msgid="9053896323427875356">This app won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_button" msgid="6556509956452265614">Update</string>

    <!-- Information for users that have a network error -->
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>

    <!-- Information for users that have an invalid account -->
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>

    <!-- Information for users that have an unknown error/issue -->
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>

    <!-- Message in confirmation dialog informing user that date on the device is not correct -->
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>

    <!-- Sign-in -->
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    
    <!-- Preferences -->
    <string name="pref_privacy">Privary</string>
    <string name="pref_new_gcm_id_title">Refresh GCM_ID</string>
    <string name="pref_new_gcm_id_desc">Clears usage traces after session</string>
    <string name="pref_store_location_title">Location storage</string>
    <string name="pref_store_location_desc">Store marked locations internally</string>
    <string name="pref_remember">Remember</string>
    <string name="pref_remember_username">Username</string>
    <string name="pref_graphic">Graphics</string>
    <string name="pref_animate_map_zoom">Animate map zoom</string>
    
    <string name="pref_key_store_location">pref_key_store_location</string>
    
    <!-- MAP -->
    <string name="map_play_fail">Google play services not found</string>

    <!--  LIST CONTACTS ROW  -->
    <string name="iv_icon_desc">Messenger Icon</string>
    
    <!--   PREVIEW IMAGE  -->
    <string name="iv_preview_image">Preview picture</string>
    <string name="btnClose">Close</string>

</resources>