<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_key_remember"
        android:title="@string/pref_remember" >
        
        <CheckBoxPreference
            android:key="pref_key_remember_username"
            android:title="@string/pref_remember_username" />
        
        <CheckBoxPreference
            android:key="@string/pref_key_store_location"
            android:summary="@string/pref_store_location_desc"
            android:title="@string/pref_store_location_title" />
        
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_graphics"
        android:title="@string/pref_graphic" >
        <CheckBoxPreference
            android:key="pref_key_animate_camera"
            android:title="@string/pref_animate_map_zoom" />
    </PreferenceCategory>

</PreferenceScreen>