<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="13dp">
    
    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:padding="5dp"
        android:text="@string/tv_welcome"/>
    
    <TextView
        android:id="@+id/tv_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:padding="5dp"
        android:text="@string/tv_intro"/>

    <Button
        android:id="@+id/btn_update_inbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/btn_update" />
    
    <LinearLayout 
        android:id="@+id/ll_messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:orientation="vertical">
        
    </LinearLayout>
</LinearLayout>
