<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp">
    
    <!-- TITLE -->

    <TextView
        android:id="@+id/tvTitleRegistration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="7dp"
        android:text="@string/tvRegistrationTitle"
        android:textAlignment="center"
        android:textSize="18sp" />
    
    <!-- USERNAME TEXTVIEW AND TEXTBOX -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <TextView
           	android:id="@+id/tvUsername"
		    android:layout_weight="1"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tvLogin" />

        <EditText
            android:id="@+id/edUsername"
            android:layout_weight="2"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" >

            <requestFocus />
            
        </EditText>
    
    </LinearLayout>
    
    
    <!-- PASSWORD TEXTVIEW AND TEXTBOX -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">
               
        <TextView
            android:id="@+id/tvPassword"
		    android:layout_weight="1"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tvPassword"/>

        <EditText
            android:id="@+id/edPassword"
            android:layout_weight="2"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

    </LinearLayout>

    
    <!-- EMAIL TEXTVIEW AND TEXTBOX -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">
               
        <TextView
            android:id="@+id/tvEmail"
		    android:layout_weight="1"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tvEmail"/>

        <EditText
            android:id="@+id/edEmail"
            android:layout_weight="2"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

    </LinearLayout>
    
    
    <!-- GCM REGISTRATION -->

    <TextView
        android:id="@+id/tvGcmRegistration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/tvGcmRegistration"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="italic" />
    
    <Button
        android:id="@+id/btnGcmRegister"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="verifyGcmRegistration"
        android:text="@string/btnRegisterGcm" />
    
    
    <!-- REGISTER ACCOUNT BUTTON -->
    <Button
        android:id="@+id/btnAccountRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="13dp"
        android:enabled="false"
        android:onClick="verifyAccountRegistration"
        android:text="@string/btnRegisterAccount" />

</LinearLayout>