<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="5dp"
    android:background="@drawable/wallpaper"
    android:orientation="vertical" >

    <!-- LOGIN TEXTVIEW AND TEXTBOX -->
    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_pass"
        android:gravity="center_vertical"
        android:layout_alignLeft="@id/ll_pass"
        android:orientation="horizontal"
        android:padding="3dp" >

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1.36"
            android:text="@string/tvLogin" />

        <EditText
            android:id="@+id/edLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="text">
            
        	<requestFocus />
        
        </EditText>
        
    </LinearLayout>


	<!-- PASSWORD TEXTVIEW AND TEXTBOX -->
    <LinearLayout
        android:id="@+id/ll_pass"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLogin"
        android:layout_alignLeft="@id/btnLogin"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="3dp" >

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1.36"
            android:text="@string/tvPassword" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="textPassword" />
        
    </LinearLayout>


    <!-- LOGIN BUTTON -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnRegister"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:onClick="verifyLogin"
        android:text="@string/btnLogin" />

    
	<!-- REGISTER BUTTON -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/btnLogin"
        android:onClick="btnRegister_click"
        android:text="@string/btnRegister" />
    
</RelativeLayout>